--- a/house-app/package.json
+++ b/house-app/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/plotly.js": "^3.0.3",
+    "@types/react-router-dom": "^5.3.3",
+    "plotly.js-dist-min": "^3.1.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
