--- a/house-app/package.json
+++ b/house-app/package.json
@@ -11,8 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/d3": "^7.4.3",
     "@types/plotly.js": "^3.0.3",
     "@types/react-router-dom": "^5.3.3",
+    "d3": "^7.9.0",
     "plotly.js-dist-min": "^3.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
